--- a/src/App.css
+++ b/src/App.css
@@ -107,16 +107,24 @@
 }
 
 .buttons {
-  width: 50%;
+  width: 75%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+.buttonGroup {
+  margin: 0 25px;
 }
 
 .homeButtons__touchdown,
 .homeButtons__fieldGoal,
 .awayButtons__touchdown,
-.awayButtons__fieldGoal {
+.awayButtons__fieldGoal,
+.buttons__quarter,
+.buttons__down,
+.buttons__toGo {
+  width: 200px;
   margin: 1rem;
   border-radius: 4px;
 }
